--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
