--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "vishal and soumen",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/speech": "^7.2.0",
     "@google/genai": "^1.15.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.11.0",
@@ -18,6 +19,10 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
