--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "replicate": "^1.1.0",
     "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   },
